Supercluster/Cluster02/DockerRegistry/Namespace.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry
  labels:
    name: docker-registry
    app: docker-registry
    owner: EliasDH
    environment: production
  annotations:
    description: This namespace is used for the docker registry application.
    contact: info@eliasdh.com
---
